# feroauth

./: .env.example  .gitignore  Cargo.toml  Makefile  Model.mwb  NOTES.md  README.md  TODO.md
database/: V0.sql  V1.sql  drop.sql
migrations/: model.sql
migrations/2021-01-17-202047_db/: down.sql  up.sql
src/: auth.rs  config.rs  db.rs  errors.rs  jwt.rs  login.rs  main.rs  misc.rs  password.rs  prelude.rs  templates.rs  user.rs  users.rs
src/jwt_lib/: error.rs  jwk.rs  jwt.rs  key.rs  key_asymmetric.rs  key_store.rs  key_symmetric.rs  prelude.rs
src/jwt_new/: error.rs  jwk.rs  jwt.rs  key.rs  key_asymmetric.rs  key_ec.rs  key_store.rs  key_symmetric.rs  mod.rs  prelude.rs
src/model/: auth.rs  db.rs  fset.rs  group.rs  group_membership.rs  mod.rs  password.rs  policy_delegation.rs  policy_enforcer.rs  policy_rule.rs  prelude.rs  session.rs  user.rs
static/css/: base.css  bootstrap-icons.css
templates/: _base.html.tera  _default.html  debug.html  error.html  login.html  login.html.tera
wui/: .env.example  README.md  TODO WUI.md  package-lock.json  package.json  vue.config.js
wui/public/: login.html
wui/src/: AppLogin.vue  global-style.scss  globals.js  i18n.js  main-login.js  main.js
wui/src/router/: index.js
wui/src/router-login/: index.js
wui/src/store/: index.js  session.js
wui/src/views/: Login.vue
