[package]
name = "feroauth"
version = "0.1.0"
authors = ["G. Queiroz <gabrieljvnq@gmail.com>"]
edition = "2018"
categories = ["authentication", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
jsonwebtoken = "7"
actix-session = "0.4.0"
argonautica = { version = "0.2", features = ["serde"] }
tokio = { version = "0.2.24", features = [ "full" ] }
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "mysql", "uuid", "chrono", "macros", "uuid" ] }
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.11"
toml = "0.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
actix-files = "0.5.0"
qstring = "0.7.2"
hex = "0.4.3"
ring = "0.16.20"
base64 = "0.13.0"
jsonwebkey-convert = "0.3.0"
openssl = "0.10"
actix-web-httpauth = "0.5.0"
futures-util = "0.3.5"